Fix notice colors in dark mode

--- a/app/javascript/stylesheets/colors.css
+++ b/app/javascript/stylesheets/colors.css
@@ -25,6 +25,14 @@
 
   --list-option-background-color-gradient-1: white;
   --list-option-background-color-gradient-2: #EEEEEE;
+
+  --notice-background-color: #D9EDF7;
+  --notice-border-color: #31708F;
+  --notice-text-color: black;
+
+  --alert-background-color: #FFFFCC;
+  --alert-border-color: #FFEB3B;
+  --alert-text-color: black;
 }
 
 @media (prefers-color-scheme: dark) {
